--- a/style.css
+++ b/style.css
@@ -1,170 +1,257 @@
 body {
-    font-family: Poppins;
+  font-family: Poppins;
+}
+
+.email-icon {
+  width: 40px;
+  height: 40px;
+  margin: 0px 3px;
 }
 
 .signupBtn {
-    background-color: #3958a1;
-    border-radius: 15px;
-    padding: 7px 30px;
-    color: white;
-    border: 0;
-    filter: drop-shadow(3px 3px 3px gray);
+  background-color: #3958a1;
+  border-radius: 15px;
+  padding: 7px 30px;
+  color: white;
+  border: 0;
+  filter: drop-shadow(3px 3px 3px gray);
 }
 
 .loginBtn {
-    background-color: #c7f3fd;
-    border-radius: 15px;
-    padding: 7px 30px;
-    border: 0;
-    filter: drop-shadow(3px 3px 3px gray);
+  background-color: #c7f3fd;
+  border-radius: 15px;
+  padding: 7px 30px;
+  border: 0;
+  filter: drop-shadow(3px 3px 3px gray);
 }
 
 .banner {
-    width: 100%;
-    height: 1000px;
-    flex-shrink: 0;
-    border-radius: 0px 0px 524px 65px;
-    background: linear-gradient(180deg, #B9FBFF 0%, rgba(209, 201, 241, 0.34) 100%);
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  width: 100%;
+  height: 1000px;
+  flex-shrink: 0;
+  border-radius: 0px 0px 524px 65px;
+  background: linear-gradient(
+    180deg,
+    #b9fbff 0%,
+    rgba(209, 201, 241, 0.34) 100%
+  );
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .inputBg {
-    background-color: inherit;
-    width: 190px;
+  background-color: inherit;
+  width: 190px;
 }
 
 .searchBtn {
-    border-radius: 28.848px;
-    background: #49BBBD;
-    width: 86.063px;
-    height: 28.848px;
-    flex-shrink: 0;
+  border-radius: 28.848px;
+  background: #49bbbd;
+  width: 86.063px;
+  height: 28.848px;
+  flex-shrink: 0;
 }
 
 .title {
-    color: #22376A;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    font-size: 22px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 135%;
-    /* 32.4px */
+  color: #22376a;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 135%;
+  /* 32.4px */
 }
 
 .heroText {
-    color: #252641;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+  color: #252641;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 .heroButton {
-    width: 220px;
-    height: 80px;
-    flex-shrink: 0;
-    border-radius: 80px;
-    background: #FFD066;
-    color: #FFF;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
+  width: 220px;
+  height: 80px;
+  flex-shrink: 0;
+  border-radius: 80px;
+  background: #ffd066;
+  color: #fff;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  border: 0;
 }
 
 .hero-content span {
-    color: #F48C06;
-    font-size: 54px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
+  color: #f48c06;
+  font-size: 54px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
 
 .hero-content h3 {
-    color: #1820AE;
-    font-size: 54px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
+  color: #1820ae;
+  font-size: 54px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
 
 .hero-content p {
-    color: #614AD3;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 160%;
-    /* 38.4px */
+  color: #614ad3;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%;
+  /* 38.4px */
 }
 
 .play {
-    border-radius: 50%;
-    /* padding: 10px; */
-    background-color: white;
-    width: 80px;
-    height: 80px;
+  border-radius: 50%;
+  /* padding: 10px; */
+  background-color: white;
+  width: 80px;
+  height: 80px;
 }
 
 .play i {
-    margin-left: 25px;
+  margin-left: 25px;
 }
 
 .join-section {
-    margin: 0px 150px;
+  margin: 0px 150px;
 }
 
 .join-section h3 {
-    color: #000;
-    font-family: Poppins;
-    font-size: 50px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    text-align: center;
-    margin-top: 196px;
+  color: #000;
+  font-family: Poppins;
+  font-size: 50px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-align: center;
+  margin-top: 196px;
 }
 
 .success-section h2 {
-    background: var(--Accent-gradient, linear-gradient(90deg, #136CB5 0%, #49BBBD 100%));
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    font-family: Poppins;
-    font-size: 82px;
-    font-style: normal;
-    font-weight: 300;
-    line-height: 100%;
-    /* 96px */
+  background: var(
+    --Accent-gradient,
+    linear-gradient(90deg, #136cb5 0%, #49bbbd 100%)
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-family: Poppins;
+  font-size: 82px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 100%;
+  /* 96px */
 }
 
 .success-section p {
-    color: var(--Half-dark-text-color, rgba(1, 5, 20, 0.80));
-    font-family: Poppins;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 130%;
-    /* 41.6px */
+  color: var(--Half-dark-text-color, rgba(1, 5, 20, 0.8));
+  font-family: Poppins;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 130%;
+  /* 41.6px */
 }
 
 .success-contents {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .fav-courses {
-    height: 1000px;
-    background: #EAEAFF;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  background: #eaeaff;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
-.fav-courses h3{
-    color: #252641;
-font-family: Poppins;
-font-size: 36px;
-font-style: normal;
-font-weight: 600;
-line-height: normal;
-width: 792px;
+.fav-courses h3 {
+  color: #252641;
+  font-family: Poppins;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  width: 792px;
+  padding-top: 80px;
+  padding-bottom: 50px;
+}
+
+.course-cards {
+  border-radius: 20px;
+  background: #fff;
+  box-shadow: 0px 18.83px 47.08px 0px rgba(47, 50, 125, 0.1);
+  width: 349px;
+  /* height: 377px; */
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 30px 0px;
+}
+
+.course-cards img {
+  padding: 20px;
+  border-radius: 5px;
+}
+
+#ssc {
+  background-color: rgba(73, 187, 189, 0.3);
+}
+
+#hsc {
+  background-color: rgba(91, 114, 238, 0.3);
+}
+
+#honors {
+  background-color: rgba(157, 204, 255, 0.3);
+}
+
+#admission {
+  background-color: rgba(0, 203, 184, 0.3);
+}
+
+#job {
+  background-color: rgba(244, 140, 6, 0.3);
+}
+
+#books {
+  background-color: rgba(238, 100, 91, 0.3);
+}
+
+#courses{
+  background-color: rgba(37, 38, 65, 0.30);
+}
+
+#exam{
+  background-color: rgba(0, 203, 184, 0.30);
+}
+
+.course-cards h4 {
+  color: #000;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 0.6px;
+  margin: 18px 0px;
+}
+
+.course-cards p {
+  color: #696984;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.36px;
 }
