--- a/style.css
+++ b/style.css
@@ -2,12 +2,6 @@ body {
   font-family: Poppins;
 }
 
-.email-icon {
-  width: 40px;
-  height: 40px;
-  margin: 0px 3px;
-}
-
 .signupBtn {
   background-color: #3958a1;
   border-radius: 15px;
@@ -25,9 +19,11 @@ body {
   filter: drop-shadow(3px 3px 3px gray);
 }
 
+.navbar {
+  font-size: 0.875rem;
+}
 .banner {
-  width: 100%;
-  height: 1000px;
+  width: auto;
   flex-shrink: 0;
   border-radius: 0px 0px 524px 65px;
   background: linear-gradient(
@@ -49,6 +45,8 @@ body {
   width: 86.063px;
   height: 28.848px;
   flex-shrink: 0;
+  color: white;
+  border: 0;
 }
 
 .title {
@@ -93,7 +91,7 @@ body {
 
 .hero-content h3 {
   color: #1820ae;
-  font-size: 54px;
+  font-size: 3.375em;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
@@ -107,7 +105,9 @@ body {
   line-height: 160%;
   /* 38.4px */
 }
-
+.hero-img {
+  padding-bottom: 180px;
+}
 .play {
   border-radius: 50%;
   /* padding: 10px; */
@@ -120,19 +120,17 @@ body {
   margin-left: 25px;
 }
 
-.join-section {
-  margin: 0px 150px;
-}
-
-.join-section h3 {
+.section-title {
   color: #000;
-  font-family: Poppins;
-  font-size: 50px;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
   text-align: center;
-  margin-top: 196px;
+  margin: 100px 0px 60px 0px;
+}
+
+.join-section h3 {
+  margin-top: 96px;
 }
 
 .success-section h2 {
@@ -164,7 +162,6 @@ body {
 .success-contents {
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 .fav-courses {
@@ -184,12 +181,15 @@ body {
   padding-bottom: 50px;
 }
 
+.fav-courses h4 {
+  padding-top: 50px;
+  padding-bottom: 30px;
+}
 .course-cards {
   border-radius: 20px;
   background: #fff;
   box-shadow: 0px 18.83px 47.08px 0px rgba(47, 50, 125, 0.1);
-  width: 349px;
-  /* height: 377px; */
+
   flex-shrink: 0;
   display: flex;
   flex-direction: column;
@@ -227,12 +227,12 @@ body {
   background-color: rgba(238, 100, 91, 0.3);
 }
 
-#courses{
-  background-color: rgba(37, 38, 65, 0.30);
+#courses {
+  background-color: rgba(37, 38, 65, 0.3);
 }
 
-#exam{
-  background-color: rgba(0, 203, 184, 0.30);
+#exam {
+  background-color: rgba(0, 203, 184, 0.3);
 }
 
 .course-cards h4 {
@@ -254,4 +254,105 @@ body {
   font-weight: 400;
   line-height: normal;
   letter-spacing: 0.36px;
+  width: 285px;
+  padding: 0px 15px;
+}
+
+.carousel-container {
+  padding: 0px 100px;
+}
+
+/* our courses section css starts */
+.our-courses-card {
+  border-radius: 20px;
+  background: #fff;
+  box-shadow: 0px 18.83px 47.08px 0px rgba(47, 50, 125, 0.1);
+}
+
+.our-courses-card h4 {
+  color: #252641;
+  font-family: Poppins;
+  font-size: 1em;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  margin: 50px 0px;
+}
+
+/* ssc - hsc styles  */
+.ssc-hsc {
+  background: #eaeaff;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  margin: 80px 0px;
+}
+
+.course-cards h5 {
+  font-weight: 600;
+}
+.single-courses {
+  width: 300px;
+  /* height: 403px; */
+  border-radius: 20px;
+  background: #fff;
+  box-shadow: 0px 18.83px 47.08px 0px rgba(47, 50, 125, 0.1);
+
+  display: flex;
+  flex-direction: column;
+  padding: 0px 10px;
+}
+
+.single-courses img {
+  padding: 0px;
+  border-radius: 20px;
+}
+
+.single-courses h5 {
+  color: #000;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  margin: 30px 0px; 
+}
+
+.single-courses p {
+  text-align: right;
+  color: #33E99F;
+  font-style: normal;
+  font-weight: 500;
+  margin-right: 20px;
+}
+
+/* ------ */
+@media (max-width: 767px) {
+  .carousel-inner .carousel-item > div {
+    display: none;
+  }
+  .carousel-inner .carousel-item > div:first-child {
+    display: block;
+  }
+}
+
+.carousel-inner .carousel-item.active,
+.carousel-inner .carousel-item-next,
+.carousel-inner .carousel-item-prev {
+  display: flex;
+}
+
+/* medium and up screens */
+@media (min-width: 768px) {
+  .carousel-inner .carousel-item-end.active,
+  .carousel-inner .carousel-item-next {
+    transform: translateX(25%);
+  }
+
+  .carousel-inner .carousel-item-start.active,
+  .carousel-inner .carousel-item-prev {
+    transform: translateX(-25%);
+  }
+}
+
+.carousel-inner .carousel-item-end,
+.carousel-inner .carousel-item-start {
+  transform: translateX(0);
 }
